Converted TestInputArgument.sh to java version.